@@ -1,4 +1,4 @@
-package org.apache.lucene.analysis;
+package org.apache.lucene.analysis.en;
 
 /**
  * Licensed to the Apache Software Foundation (ASF) under one or more
